--- a/templates/register.html
+++ b/templates/register.html
@@ -38,7 +38,7 @@
         </div>
 
 
-        <p>{{ form.submit(type="submit", class="begin-reg-ath") }}</p>
+        <p>{{ form.submit(type="submit", class="form-control begin-reg-ath") }}</p>
         {{message}}
     </form>
 
