--- a/templates/create.html
+++ b/templates/create.html
@@ -320,7 +320,7 @@
 </div>
 <div class="container">
     <h1>Create Test</h1>
-    <form method="post" , enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label for="test-name">Название теста:</label>
             <input type="text" id="test-name" name="test-name" maxlength="50" required>
@@ -328,7 +328,7 @@
         </div>
 
         <div class="form-group">
-            <label for="test-description">Описание теста
+            <label for="test-description">Описание теста </label>
                 <textarea id="test-description" name="test-description" rows="5" maxlength="300" required></textarea>
                 <div class="character-count"><span>0</span>/300</div>
         </div>
