--- a/templates/login.html
+++ b/templates/login.html
@@ -21,10 +21,7 @@
                 </div>
             {% endfor %}
         </div>
-        <div>
-            {{ form.remember_me() }} {{ form.remember_me.label }}
-        </div>
-        <p>{{ form.submit(type="submit", class="begin-reg-ath") }}</p>
+        <p>{{ form.submit(type="submit", class="form-control begin-reg-ath") }}</p>
         <div>{{ message }}</div>
     </form>
 {% endblock %}
