--- a/templates/add_text_question.html
+++ b/templates/add_text_question.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>My Webpage</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='add_text_question.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/add_text_question.css') }}">
 </head>
 <body>
 {% for i in range(ln) %}
