--- a/templates/img.html
+++ b/templates/img.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Upload Images</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='img.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/img.css') }}">
 </head>
 <body>
     <div class="container">
