--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,14 +32,25 @@
             margin-top: 25px;
 
         }
+
         .bio {
-            background-color: #888e94;
-            border-radius: 15px;
+            width: 100%;
+            height: 17.5%;
+        }
+	    .bio textarea {
+            height: 100%;
+            width: 100%;
+            margin-top: 10px;
+            margin-bottom: 0px;
             padding: 10px;
-            margin-top: 20px;
-            border: 1px solid #CCC;
+            border: 2px solid #FFCA28;
+            border-radius: 5px;
             font-size: 16px;
-            max-width: 300px;
+            color: #FFCA28;
+            resize: none;
+            box-sizing: border-box;
+            transition: border-color 0.2s ease-in-out;
+            background-color: #3A424B;
         }
         .buttons {
             display: flex;
@@ -59,22 +70,29 @@
             margin-left: 10px;
             font-size: 16px;
             cursor: pointer;
+            transition: background-color 0.2s ease-in-out;
         }
+
+    .button:hover{
+	  background-color: #253137;
+      color: #FFCA28;
+	}
         .profile-photo {
             width: 300px;
             height: 370px;
             border-radius: 25px;
             text-align: center;
-            background-image: url("/static/images/left.png");
             background-repeat:no-repeat;
             background-position: center center;
-            color: #df396a;
+            color: #FFCA28;
+            font-size: 18px;
+            font-weight: bold;
+            border: 2px solid #FFCA28;
         }
         .prof-text {
             font-size: 24px;
             font-weight: bold;
             text-align: center;
-            margin-bottom: 5px;
         }
         .nav {
 			background-color: #3A424B;
@@ -188,11 +206,11 @@
       .item-details span {
         font-weight: bold;
       }
-      .qwe {
+      .content {
         display: flex;
         flex-direction: row;
       }
-      .ewq{
+      .avatar-and-description{
          margin-right: 30px;
       }
     </style>
@@ -208,28 +226,22 @@
     <div class="profile-container">
         <div class="buttons">
             <button class="button" onclick="window.location.href = 'http://127.0.0.1:5000/settings-profile'">настройки</button>
-            <button class="button">тесты</button>
-            <button class="button">избранное</button>
+            <button class="button" onclick="window.location.href = 'http://127.0.0.1:5000/tests'">тесты</button>
             <button class="button" onclick="window.location.href = 'http://127.0.0.1:5000/logout'">выйти</button>
-            <button class="button">жалоба</button>
-            <button class="button">статистика</button>
         </div>
-        <div class="qwe">
-        <div class="ewq">
+        <div class="content">
+        <div class="avatar-and-description">
             <div class="prof-text">Профиль пользователя</div>
             <div class="profile-photo">
-                <img src="/static/images/right.png" alt="Аватар пользователя" class="avatar">
-                <p>никнейм</p>
-                <p> На сайте с ...</p>
+                <img src="{{ form.image }}" alt="Аватар пользователя" class="avatar">
+                <p>{{ form.name }}</p>
+                <p> {{ form.created_date }}</p>
             </div>
             <div class="bio">
-                <p>О себе:</p>
-              <p>
-                Здесь пока что ничего нет ;(
-              </p>
+                {{ form.bio(maxlength=360, placeholder="О себе", readonly=true) }}
             </div>
         </div>
-        {% for item in items %}
+        {% for item in form.tests %}
         <div class="item" onclick="selectImage('{{ item.id }}')">
             <div class="item-image">
                 <img src="{{ item.image }}" alt="{{ item.name }}">
