--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
         <h1> Регистрация</h1>
         {{ form.hidden_tag() }}
         <div class="input labeled">
-            {{ form.name(class="form-control user-icon", placeholder="Логин") }}<br>
+            {{ form.name(class="form-control user-icon", placeholder="Никнейм") }}<br>
             {% for error in form.name.errors %}
                 <p class="alert alert-danger" role="alert">
                     {{ error }}
