--- a/templates/settings-profile.html
+++ b/templates/settings-profile.html
@@ -5,11 +5,11 @@
     <title>Страница настроек</title>
      <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}"/>
     <style>
-        body {
-            background-color: #3A424B;
-            color: #FFCA28;
-            font-family: Arial, sans-serif;
-        }
+    body {
+      background-color: #3A424B;
+      color: #FFCA28;
+      font-family: Arial, sans-serif;
+    }
     .container {
       display: flex;
       text-align: center;
@@ -38,9 +38,11 @@
       display: flex;
       justify-content: space-between;
       flex-direction: column;
-      width: 75%;
+      width: 60%;
       margin: auto;
       margin-bottom: 0px;
+      white-space: pre-line;
+
     }
 
     .right-section {
@@ -61,48 +63,59 @@
       display: flex;
       margin-bottom: 10px;
       align-items: center;
+      cursor: pointer;
+      transition: background-color 0.2s ease-in-out;
     }
-    .input-group label {
-      width: 70px;
-      margin-right: 5px;
 
-    }
+    .input-group:hover{
+	  background-color: #FFCA28;
+      color: #253137;
+	}
+
     .profile-photo {
       width: 80%;
       height: 60%;
       border-radius: 25px;
       text-align: center;
-      background-image: url("/static/images/left.png");
       background-repeat:no-repeat;
       background-position: center center;
-      color: #df396a;
+      color: #FFCA28;
+      font-size: 18px;
+      font-weight: bold;
+      border: 1px solid #FFCA28;
     }
+
     text {
       font-size: 36px;
       font-weight: bold;
     }
 
     input::file-selector-button {
-		 background-color: #4CAF50;
-      border: none;
-      padding: 10px 20px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
       margin: 4px 2px;
-      cursor: pointer;
-      border-radius: 5px;
       margin-bottom: 15px;
+      padding: 10px 20px;
+      background-color: #253137;
+      border-radius: 5px;
+      font-size: 18px;
+      color: #FFCA28;
+      cursor: pointer;
+      transition: background-color 0.2s ease-in-out;
+      display: inline-block;
+      text-decoration: none;
+      text-align: center;
+    }
+    input::file-selector-button:hover {
+      background-color: #FFCA28;
+      color: #253137;
+	}
 
-
-		}
 	.submit {
 	  margin-top: 25px;
 	  }
+
     .bio {
-    width: 80%;
-    height: 40%;
+      width: 80%;
+      height: 40%;
     }
 	.bio textarea {
 	  height: 96.5%;
@@ -124,7 +137,6 @@
       background-color: #3A424B;
       overflow: hidden;
     }
-
     .nav a {
       float: right;
       color: #FFCA28;
@@ -133,23 +145,26 @@
       padding: 16px 16px;
       text-decoration: none;
       font-family: Verdana, Helvetica, Arial, sans-serif;
-    }
-    .nav a {
       margin-left: 75px;
     }
 
     .nav .pick a {
       float: left;
-      margin-left: 45   %;
+      margin-left: 45%;
       padding: 0px 0px;
     }
     .nav .ak a:hover {
       background-color: #FFCA28;
       color: black;
     }
-    .counter {
-      word-wrap: break-word;
-      }
+    input[type="file"] {
+      border-box;
+      width: 100%;
+      border: none;
+      border-radius: 5px;
+    }
+
+
     </style>
 </head>
 <body>
@@ -161,13 +176,16 @@
     </div>
 </div>
     <form method="post" enctype="multipart/form-data">
+        <div>
+            {{ form.csrf_token }}
+        </div>
     <div class="container">
         <div class="left-section">
             <div class="profile-photo">
                 <img src="{{ form.path_avatar }}" alt="Аватар пользователя" class="avatar">
                 <div class="btn-group">
-                    <div class="text"> фото профиля</div>
-                    {{ form.download_img }}
+                    {{ form.download_img(style="color:transparent;", accept=".jpg, .jpeg, .png, .bmp, .gif, .webp, .jfif") }}
+                    {{ form.created_date }}
                 </div>
             </div>
             <div class="bio">
@@ -177,7 +195,7 @@
         <div class="right-section">
             <div class="input labeled">
                 <div class="text">Настройки</div>
-                {{ form.name(class="form-control user-icon", placeholder="Логин") }}<br>
+                {{ form.name(class="form-control user-icon", maxlength=32, placeholder="Никнейм") }}<br>
                 {% for error in form.name.errors %}
                 <p class="alert alert-danger" role="alert">
                     {{ error }}
@@ -185,7 +203,7 @@
                 {% endfor %}
             </div>
             <div class="input labeled">
-                {{ form.email(class="form-control email-icon", type="email", placeholder="email почта") }}<br>
+                {{ form.email(class="form-control email-icon", type="email", maxlength=64, placeholder="email почта") }}<br>
                 {% for error in form.email.errors %}
                     <p class="alert alert-danger" role="alert">
                         {{ error }}
@@ -216,32 +234,13 @@
                     </p>
                 {% endfor %}
             </div>
-            <div class="submit">{{ form.submit_save(type="submit", class="form-control begin-reg-ath") }} {{ form.submit_reset(type="submit", class=" form-control begin-reg-ath") }}</div>
-            <div class="text"> {{ form.message }}</div>
+            <div class="submit">{{ form.submit_save(type="submit", class="form-control begin-reg-ath") }} {{ form.submit_reset(type="submit", class="form-control begin-reg-ath") }}</div>
+            <div class="text" style="color: red"> {{ form.message }}</div>
         </div>
     </div>
 
     </form>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script>
-		$(document).ready(function() {
-			// Count characters in test name and test description fields
-			$('#bio, #test-description').on('input', function() {
-				var maxLength = $(this).attr('maxlength');
-				var currentLength = $(this).val().length;
-				var $characterCount = $(this).parent().find('.character-count span');
-				$characterCount.text(currentLength);
-			});
-
-		$('#bio').on("input", function() {
-          var maxlength = $(this).attr("maxlength");
-          var currentLength = $(this).val().length;
-          var $characterCount = $(this).parent().find('.character-count span');
-
-          $characterCount.text(currentLength);
-        });
-
-</script>
 </body>
 </html>
